# Proactive-World-Modeling

./: .gitignore  README.md  RESEARCH_LOG.md  pyproject.toml
Archive_generated_fix3/: _continuation_batch_summary.json  _fix3_qa_summary.json
configs/: domain_specialization_v1.json
data/: README.md  legacy_mapping_template.json
docs/: 00_claim_to_artifact_audit.md  01_data_generation_loop_status.md  02_data_loop_master_plan.md  03_world_model_supervision_contract.md  04_visual_input_contract.md  05_current_code_status.md  10_readable_data_plan_background.md  13_pilot30_continuation_review_report.md  14_priority_generation_policy.md  90_neurips_sprint_master_plan.md  91_neurips_sprint_codex_plan.md  93_remote_sprint_runbook.md  README.md  current_status.md  piwm_phase2_readable_data_plan.md
kling/: generate_session.js  package-lock.json  package.json
paper/: data_section_emnlp.tex  data_section_emnlp_zh.md  main.tex
piwm_data/: __init__.py  archive_loader.py  build_dataset.py  exporters.py  migrate_legacy_archive.py  reaction_templates.py  rules.py  schemas.py  validate.py
piwm_infer/: __init__.py  baselines.py  config.py  decision_loop.py  parsers.py  prompts.py
piwm_train/: __init__.py  a3plus_metrics.py  config.py  data_collator.py  dpo_data.py  ms_swift_adapter.py  prompts.py  sft.py  targets.py
reports/: 2026-05-26_paper_polish_batch1_changelog.md
scripts/: __init__.py  apply_target_frontcam_qa_review.py  build_combined_dataset.py  build_domain_specialization_dataset.py  build_guidance_sales_bench.py  build_stage1_general_split.py  extract_frames.py  (+17 more)
(+1998 files in other folders)
