[project]
name = "piwm-data-pipeline"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
test = [
  "pytest",
]
train = [
  "accelerate",
  "bitsandbytes",
  "modelscope",
  "ms-swift",
  "peft",
  "pillow",
  "qwen-vl-utils",
  "torch",
  "transformers",
  "trl",
]

[tool.pytest.ini_options]
testpaths = ["piwm_data/tests", "piwm_train/tests", "piwm_infer/tests"]
